Pull request #68: example repaired, deeplink support added in example, changes in plugin to support opening by url for both platforms
Merge in MML/infobip-mobile-messaging-cordova-plugin from okoroleva-MM-4248_ExampleForDeeplink to master

Squashed commit of the following:

commit 3be277992a0990e41f31135bc700ee7d8938a24b
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Nov 27 11:28:46 2020 +0300

    updated huawei dependency

commit 70a5fefc189d347c231990863e32c92f88857e9b
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Nov 27 11:15:43 2020 +0300

    alignments of the deeplinking code

commit da358d81db338e3ededbb20eeb1b0f2433ad0e61
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Nov 25 16:31:38 2020 +0300

    minor change

commit 39a13b32769538c492a02b17be716a928dc11ff9
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Nov 25 13:05:28 2020 +0300

    minor fix

commit cbdcff4b1d0b953e4702e9336be419fcfd1aee7e
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Nov 25 11:05:08 2020 +0300

    automatic scheme for AndroidManifest.xml

commit 05ee094d499515aea8ff4deb26c2c1da10d55178
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Nov 24 17:34:27 2020 +0300

    automated adding of the URLTypes for iOS

commit 34971a19d68596b4391091ef54f2899b2b8715b0
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Nov 24 17:03:48 2020 +0300

    example repaired, deeplink support added in example, changes in plugin to support opening by url for both platforms

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -47,24 +47,17 @@
                 </div>
                 <h3>Predefined user data</h3>
                 <div class="field">
-                    <div class="caption">MSISDN:</div>
+                    <div class="caption">Phones:</div>
                     <div class="input">
                         <div class="title"></div>
-                        <input type="text" name="msisdn" title="MSISDN" />
+                        <input type="text" name="phones" title="Phones" />
                     </div>
                 </div>
                 <div class="field">
-                    <div class="caption">Email:</div>
+                    <div class="caption">Emails:</div>
                     <div class="input">
                         <div class="title"></div>
-                        <input type="text" name="email" title="Email" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="caption">Landline number:</div>
-                    <div class="input">
-                        <div class="title"></div>
-                        <input type="text" name="telephone" title="Landline number" />
+                        <input type="text" name="emails" title="Emails" />
                     </div>
                 </div>
                 <div class="field">
