Pull request #84: Feature/MCA-1976 set language
Merge in MML/infobip-mobile-messaging-cordova-plugin from feature/MCA-1976_set_language to release-3.0.0

Squashed commit of the following:

commit 2236fedee7993715dd59b07c857fba215313e3e2
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jul 19 10:26:26 2022 +0200

    MCA-2049 Changed error text

commit d19d9414b8481e33552b114b1bae2e0d5e560854
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jul 18 11:06:53 2022 +0200

    MCA-2049 Fixed public fun params doco

commit 2ceb9a3d3deff7c80bf7787430fffa90f02f79be
Merge: b696a36c 0e7ffbf9
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jul 18 11:05:03 2022 +0200

    Merge remote-tracking branch 'origin/release-3.0.0' into feature/MCA-1976_set_language

    # Conflicts:
    #	example/www/js/app.js
    #	libs/android/mobile-messaging-aar.gradle
    #	libs/ios/Cartfile
    #	libs/ios/Cartfile.resolved

commit b696a36c8306c02acd9a4cad9268135e65e3e336
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Jul 7 10:20:42 2022 +0200

    MCA-2049 Updated Huawei MM SDK Geo version

commit f0fa0f9d1caf0bb5182ed6138a2f77b1cb074228
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Jun 30 10:01:53 2022 +0200

    MCA-2049 Updated Huawei MM SDK version

commit b5b32bb233024ea8b1d45dc93ac728045329db38
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Jun 17 11:59:16 2022 +0200

    MCA-2049 Fixed little things

commit 69e66c1b7ca73808a1c171158f95fda0c7579e30
Author: Francisco Fortes <francisco.fortes@infobip.com>
Date:   Thu Jun 16 14:02:40 2022 +0200

    iOS changes

commit b0de6bef9836b3d5e8ad794095c54e1a5bf14808
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Jun 16 10:03:47 2022 +0200

    MCA-2049 Fixed example comma

commit 256a84c946d23cc0fe3be48a6059ddf9330ffda1
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Jun 16 07:51:43 2022 +0200

    MCA-2049 Added test

commit 4d5120dfe0252018aa65b8ab43ea

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -33,6 +33,44 @@
 
         <div id="screen-inbox" class="template screen inbox">
             <div class="no-messages">You have no messages yet...</div>
+            <br><br>
+            <form class="in-app-chat">
+                <div class="field">
+                    <label for="languages_select">Choose InAppChat language:</label>
+                    <select name="languages" id="languages_select">
+                        <option value="en">ENGLISH</option>
+                        <option value="tr">TURKISH</option>
+                        <option value="ko">KOREAN</option>
+                        <option value="ru">RUSSIAN</option>
+                        <option value="zh">CHINESE</option>
+                        <option value="es">SPANISH</option>
+                        <option value="es">SPANISH_LA</option>
+                        <option value="pt">PORTUGUESE</option>
+                        <option value="pt">PORTUGUESE_BR</option>
+                        <option value="pl">POLISH</option>
+                        <option value="ro">ROMANIAN</option>
+                        <option value="ar">ARABIC</option>
+                        <option value="bs">BOSNIAN</option>
+                        <option value="hr">CROATIAN</option>
+                        <option value="el">GREEK</option>
+                        <option value="sv">SWEDISH</option>
+                        <option value="th">THAI</option>
+                        <option value="lt">LITHUANIAN</option>
+                        <option value="da">DANISH</option>
+                        <option value="lv">LATVIAN</option>
+                        <option value="hu">HUNGARIAN</option>
+                        <option value="it">ITALIAN</option>
+                        <option value="fr">FRENCH</option>
+                        <option value="sl">SLOVENIAN</option>
+                        <option value="uk">UKRAINIAN</option>
+                        <option value="ja">JAPANESE</option>
+                    </select>
+                </div>
+
+                <div style="text-align: center; margin-top: 15px;">
+                    <button type="submit">Show InAppChat</button>
+                </div>
+            </form>
         </div>
 
         <div id="screen-settings" class="template screen settings">
