Pull request #103: Ikresic MM-6265 cordova add inbox
Merge in MML/infobip-mobile-messaging-cordova-plugin from ikresic-MM-6265-cordova-add-inbox to master

Squashed commit of the following:

commit 8585708f6bd56b3e6007847f200dafa3028b5594
Merge: 204ae4d aa4adf8
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 14:21:47 2024 +0100

    Merge branch 'master' into ikresic-MM-6265-cordova-add-inbox

    # Conflicts:
    #	libs/ios/Cartfile
    #	libs/ios/Cartfile.resolved

commit 204ae4d084aeb9176ebd5a9956b19d085e74dbf4
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 11:43:40 2024 +0100

    - updated ios version

commit eef9bd1b9b0fc1289a836c320cace5d1689a5864
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 11:34:49 2024 +0100

    - updated ios version

commit e41b149d1a68b51bc89d789da346e455ab7f9a65
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 11:21:10 2024 +0100

    - updated ios version

commit 16dd9471a5ae3274ddc67efb986752fa81dc57ec
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 08:42:18 2024 +0100

    - updated ios version

commit a8d30f65fa72895132d73c96007fb9bd63cef328
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 00:19:34 2024 +0100

    - updated ios version

commit 6269e9a08cfb2b7da10a4809aa99b80361a0864c
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 00:15:49 2024 +0100

    - updated ios version

commit 41ddf19e4935cbe0990f3a0a2b04157fe8ca783d
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 00:02:14 2024 +0100

    - updated ios version

commit 27008a66c5ace88fd28bde763e7cfaa6d5388c1f
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 00:01:11 2024 +0100

    - updated ios version

commit 80f1a089f74d19c7603606449a848a55c11cda61
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Mar 20 23:37:24 2024 +0100

    - updated ios version

commit 0f6f5f7c27491993f794eff7dc5d2d832a981de1
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed 

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -31,12 +31,12 @@
 
 <!-- templates -->
 
-<div id="screen-inbox" class="template screen inbox">
+<div id="screen-local-inbox" class="template screen local-inbox">
     <div class="no-messages">You have no messages yet...</div>
     <br><br>
-    <form class="in-app-chat">
+    <form class="local-inbox">
         <div class="field">
-            <label for="languages_select">Choose InAppChat language:</label>
+            <label for="languages_select">Choose Local inbox language:</label>
             <select name="languages" id="languages_select">
                 <option value="en">ENGLISH</option>
                 <option value="tr">TURKISH</option>
@@ -72,6 +72,52 @@
         </div>
         <div style="text-align: center; margin-top: 15px;">
             <button type="button" id="register-android">Register for Android Notifications</button>
+        </div>
+    </form>
+</div>
+
+<div id="screen-inbox" class="template screen inbox">
+    <div class="no-messages" style="align-content: center">You have no messages yet...</div>
+    <br><br>
+    <h3>Filter options for Inbox</h3>
+    <br>
+    <form class="inbox-filtering-form">
+        <div class="field" style="align-content: center">
+            <div class="caption">DateTime From:</div>
+            <div class="input">
+                <input type="datetime-local" name="fromDateTime" />
+            </div>
+        </div>
+
+        <div class="field" style="align-content: center">
+            <div class="caption">DateTime to:</div>
+            <div class="input">
+                <input type="datetime-local" name="toDateTime" />
+            </div>
+        </div>
+
+        <div class="field" style="align-content: center">
+            <div class="caption">Topic:</div>
+            <div class="input">
+                <input type="text" name="topic"/>
+            </div>
+        </div>
+
+        <div class="field" style="align-content: center">
+            <div class="caption">Limit:</div>
+            <div class="input">
+                <input type="number" name="limit"/>
+            </div>
+        </div>
+    </form>
+    <form class="get-inbox">
+        <div style="text-align: center; margin-top: 15px;">
+            <button type="button" id="get-inbox-messages">Get Inbox Messages</button>
+        </div>
+    </form>
+    <form class="set-inbox-seen">
+        <div style="text-align: center; margin-top: 15px;">
+            <button type="button" id="set-inbox-seen">Set Inbox Messages Seen</button>
         </div>
     </form>
 </div>
@@ -163,7 +209,8 @@
 <script type="text/javascript" src="js/mm-mock.js"></script>
 <script type="text/javascript" src="js/utils.js"></script>
 <script type="text/javascript" src="js/layout/layout.js"></script>
-<script type="text/javascript" src="js/inbox/list.js"></script>
+<script type="text/javascript" src="js/local-inbox/list.js"></script>
+<script type="text/javascript" src="js/local-inbox/screen-local-inbox.js"></script>
 <script type="text/javascript" src="js/inbox/screen-inbox.js"></script>
 <script type="text/javascript" src="js/settings/screen-settings.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
