--- a/example/www/index.html
+++ b/example/www/index.html
@@ -155,6 +155,63 @@
     </form>
 </div>
 
+<div id="screen-chat" class="template screen chat">
+    <form class="personalization-data">
+        <h3>Personalization data</h3>
+        <div class="field">
+            <div class="caption">First name:</div>
+            <div class="input">
+                <div class="title"></div>
+                <input type="text" name="firstName" title="First name" />
+            </div>
+        </div>
+        <div class="field">
+            <div class="caption">Middle name:</div>
+            <div class="input">
+                <div class="title"></div>
+                <input type="text" name="middleName" title="Middle name" />
+            </div>
+        </div>
+        <div class="field">
+            <div class="caption">Last name:</div>
+            <div class="input">
+                <div class="title"></div>
+                <input type="text" name="lastName" title="Last name" />
+            </div>
+        </div>
+        <div class="field">
+            <div class="caption">Subject type:</div>
+            <select id="subjectType" name="subjectType">
+                <option value="email">E-mail</option>
+                <option value="phoneNumber">Phone number</option>
+                <option value="externalPersonId">External person ID</option>
+            </select>
+        </div>
+        <div class="field">
+            <div class="caption">Subject:</div>
+            <div class="input">
+                <div class="title"></div>
+                <input type="text" name="subject" title="Subject" />
+            </div>
+        </div>
+
+        <div style="text-align: center; margin-top: 15px;">
+            <button type="submit" value="authenticate" >Authenticate</button>
+        </div>
+
+        <div style="text-align: center; margin-top: 15px;">
+            <button type="submit" value="personalize" >Personalize</button>
+        </div>
+    </form>
+
+    <div style="text-align: center; margin-top: 15px;">
+        <button id="showChat">Show chat</button>
+    </div>
+</div>
+
+
+
+
 <ul id="list" class="template list"></ul>
 <li id="list-item" class="template list-item">
     <!--<span class="mark"></span>-->
@@ -174,11 +231,14 @@
 <script type="text/javascript" src="js/scope.js"></script>
 <script type="text/javascript" src="js/mm-mock.js"></script>
 <script type="text/javascript" src="js/utils.js"></script>
+<script type="text/javascript" src="js/lib/jsrsasign-all-min.js"></script>
+<script type="text/javascript" src="js/jwt-utils.js"></script>
 <script type="text/javascript" src="js/layout/layout.js"></script>
 <script type="text/javascript" src="js/local-inbox/list.js"></script>
 <script type="text/javascript" src="js/local-inbox/screen-local-inbox.js"></script>
 <script type="text/javascript" src="js/inbox/screen-inbox.js"></script>
 <script type="text/javascript" src="js/settings/screen-settings.js"></script>
+<script type="text/javascript" src="js/chat/screen-chat.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
